--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ Step 6. Past the embed video code
   <div class="ui two column page grid">
     <div class="column">
         <!-- PASTE VIDEO ONE EMBED CODE BELOW THIS LINE -->
-        <iframe width="490" height="276" src="//www.youtube.com/embed/I4Peyhk7ZS8" frameborder="0" allowfullscreen></iframe>
+        <iframe width="300" height="169" src="//www.youtube.com/embed/TnhENxk-rqo" frameborder="0" allowfullscreen></iframe>
     </div>  
     <div class="column">
         <!-- PASTE VIDEO TWO EMBED CODE BELOW THIS LINE -->
