--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ Step 6. Past the embed video code
     </div>  
     <div class="column">
         <!-- PASTE VIDEO TWO EMBED CODE BELOW THIS LINE -->
-        <img class="ui border-round" src="http://placehold.it/300x297">
+        <iframe width="528" height="297" src="//www.youtube.com/embed/BXRtQWpxwxE" frameborder="0" allowfullscreen></iframe>
       </div>
   </div>
 </section>
