--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Section Description: This section contains the main menu for the single page web
     
 <div class="ui fixed top transparent main menu">    
   <!-- Insert your Website Title in the link content below -->    
-  <a class="item" href="#home">Website Title</a>
+  <a class="item" href="#home">Moshi Craft</a>
   <!-- Change the text of the link content below -->
   <a class="item" href="#section-one">Change this content</a>
   <!-- Change the text of the link content below -->
@@ -89,7 +89,7 @@ Header Instructions
   <div class="ui one column page grid">
       <div class="column center aligned">
         <!-- Step 1. Change the text of the h1 heading content below to the name of your website. -->
-        <h1 class="ui header huge white">Insert the name of your website</h1>
+        <h1 class="ui header huge white">Moshi Craft</h1>
         <!-- Step 2. Change the text of the p content below to be about your website.-->
         <p class="ui header small white">Write your first paragaph about your website.</p>
         <!-- Step 3. Change the text of the p content below to be about your website.-->
