--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@ Header Instructions
         <!-- Step 1. Change the text of the h1 heading content below to the name of your website. -->
         <h1 class="ui header huge white">Moshi Craft</h1>
         <!-- Step 2. Change the text of the p content below to be about your website.-->
-        <p class="ui header small white">Write your first paragaph about your website.</p>
-        <!-- Step 3. Change the text of the p content below to be about your website.-->
+        <p class="ui header small white">The moshling gets pixelated!</p>
+        
         <p class="ui header small white">Write your second paragraph about your website.</p>
         <!-- Step 4. Change the text of the button below to something you like -->
         <a href="" class="ui button">Button One</a>
