--- a/index.html
+++ b/index.html
@@ -165,13 +165,13 @@ Section Two Instructions
 <section id="section-two">
   <div class="ui one column page grid">
     <!-- Change the section two header below -->
-    <h2 class="ui center aligned header"><!-- Insert your own code here -->This is the section two header</h2>  
+    <h2 class="ui center aligned header"><!-- Insert your own code here --></h2>  
   </div>    
   <div class="ui three column page grid">
     <div class="column">
       <div class="ui segment center aligned">
         <h3 class="ui header"><!-- Insert your own code here -->This is a sample header</h3>
-        <img src="http://placehold.it/240x240">  
+        <img src="http://www.supercheats.com/guides/files/guid/moshi-monsters/logo.jpg">  
         <p><!-- Insert your own code here -->This paragraph should describe link #1</p>
         <a class="ui button blue"><!-- Insert your own code here -->Link #1</a>
       </div>
