--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ Section Two Instructions
     <div class="column">
       <div class="ui segment center aligned">
         <h3 class="ui header"><!-- Insert your own code here -->This is a sample header</h3>
-        <img src="http://www.supercheats.com/guides/files/guid/moshi-monsters/logo.jpg">  
+        <img src="http://www.supercheats.com/guides/files/guid/moshi-monsters/logo.jpg" width="240" height="240">  
         <p><!-- Insert your own code here -->This paragraph should describe link #1</p>
         <a class="ui button blue"><!-- Insert your own code here -->Link #1</a>
       </div>
