--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ Section Two Instructions
     <div class="column">
       <div class="ui segment center aligned">
         <h3 class="ui header"><!-- Insert your own code here -->This is a sample header</h3>
-        <img src="http://placehold.it/240x240">  
+        <img src="http://ts1.mm.bing.net/th?&id=HN.608052839734248589&w=300&h=300&c=0&pid=1.9&rs=0&p=0&url=http%3A%2F%2Fhdw.eweb4.com%2Fout%2F360946.html">  
         <p>This paragraph should describe link #2</p>
         <a class="ui button orange">Link #2</a>
       </div>
