--- a/index.html
+++ b/index.html
@@ -270,20 +270,20 @@ Step 4. Include what you want to be when you grow up.
     <div class="column">
       <div class="example">
       <!-- Step 2. Add your name to the header. Change the heading to include your first name. -->
-      <h4 class="ui top attached orange header">About <span class="ui header white">INSERT YOUR FIRST NAME HERE</span></h4>
+      <h4 class="ui top attached orange header">About <span class="ui header white">Minh Thu</span></h4>
       <div class="ui segment attached">
-      <p class="ui large">This is the about section where you can share some things about yourself. You should write two sentences here         about yourself.</p>
+      <p class="ui large">I like purple!I love panda!:D</p>
       <!-- Include what you want to be when you grow up. -->      
-      <p>When I'm grow up, I want to be an <span class="ui underline header red">INSERT JOB</span>.</p>
+      <p>When I'm grow up, I want to be an <span class="ui underline header red">Doctor</span>.</p>
       <p>I joined the Log Camp: #Bridges program on <span class="ui underline header blue">June 23, 2014</span>.</p>
       <h3>My three favorite things are:</h3>      
       <ul class="ui vertical ordered list">
         <!-- Insert your first favorite thing. -->  
-        <li class="item"><span class="ui header teal">INSERT FAVORITE THING ONE</span></li>
+        <li class="item"><span class="ui header teal">FAVORITE:Panda</span></li>
         <!-- Insert your second favorite thing. --> 
-        <li class="item"><span class="ui header teal">INSERT FAVORITE THING TWO</span></li> 
+        <li class="item"><span class="ui header teal">FAVORITE:Moshi Monster games</span></li> 
         <!-- Insert your third favorite thing. --> 
-        <li class="item"><span class="ui header teal">INSERT FAVORITE THING THREE</span></li> 
+        <li class="item"><span class="ui header teal">FAVORITE:Eating,Dancing,and Singing</span></li> 
       </ul>               
         </div>
         <h4 class="ui bottom attached header">Thanks for visiting my website!</h4>
