--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ Section Two Instructions
     <div class="column">
       <div class="ui segment center aligned">
         <h3 class="ui header">This is a sample header</h3>
-        <img src="http://placehold.it/240x240">  
+        <img src="http://t0.gstatic.com/images?q=tbn:ANd9GcRxCnwNTw_d2nDUj4xwDEwQKcxqMAB9lanTfuVF7FxDn5R-Ny0M4A:moshi-monsters.clipartonline.net/_/rsrc/1348765572186/home/Blurp-Moshi-Monsters.png%3Fheight%3D320%26width%3D320">  
         <p>This paragraph should describe link #3</p>
         <a class="ui button green">Link #3</a>
       </div>
