--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@ Header Instructions
         <!-- Step 2. Change the text of the p content below to be about your website.-->
         <p class="ui header small white">The moshling gets pixelated!</p>
         
-        <p class="ui header small white">Write your second paragraph about your website.</p>
+        <p class="ui header small white">This is the story of how a moshling enters the world of minecraft.</p>
         <!-- Step 4. Change the text of the button below to something you like -->
-        <a href="" class="ui button">Button One</a>
+        <a href="http://en.wikipedia.org/wiki/Moshi_Monsters" class="ui button">moshling world</a>
         <!-- Step 5. Change the text of the button below to something you like -->
-        <a href="" class="ui button">Button Two</a>
+        <a href="http://minecraft.gamepedia.com/Minecraft_Wiki" class="ui button">minecraft world</a>
       </div>
   </div>
 </header>
